Update and rename 基本有用的电子阅读指南 v0.2 F-190615.md to 基本有用的电子阅读指南 v0.2 F-190616.md

--- a/基本有用的电子阅读指南 v0.2 F-190616.md
+++ b/基本有用的电子阅读指南 v0.2 F-190616.md
@@ -6,9 +6,9 @@
 
 ## 说明
 
-旨在介绍各类阅读软件供大家选择，PC / 安卓为主。点击导向官网或下载，安卓可能要翻墙。
+　　旨在介绍各类格式阅读软件，PC / 安卓为主。点击导向官网或下载，安卓可能要翻墙。
 
-本文使用[`Typora`](https://www.typora.io/)生成，建议用其阅读和输出文件，推荐[VUE](http://theme.typora.io/theme/Vue/)主题
+　　本文.MD版使用[`Typora`](https://www.typora.io/)生成，建议用其阅读、输出文件，推荐[VUE](http://theme.typora.io/theme/Vue/)主题
 
 
 
@@ -60,7 +60,7 @@
 
 **安卓**
 
-图书　[Kindle](https://www.amazon.cn/gp/digital/fiona/kcp-landing-page/)　[CAJViewer](http://cajviewer.cnki.net/)　[Librera](https://librera.mobi/)　[阅读](https://www.coolapk.com/apk/com.gedoor.monkeybook)　[閑讀書](https://www.lanzous.com/i3zqnkh)　[阿帕比阅读器](http://www.apabi.cn/download/)
+图书　[Kindle](https://www.amazon.cn/gp/digital/fiona/kcp-landing-page/)　[CAJViewer](http://cajviewer.cnki.net/)　[阅读](https://www.coolapk.com/apk/com.gedoor.monkeybook)　[閑讀書](https://www.lanzous.com/i3zqnkh)　[阿帕比阅读器](http://www.apabi.cn/download/)
 
 漫画　[PerfectViewer](https://soft.shouji.com.cn/down/21244.html)　[CDisplay](https://play.google.com/store/apps/details?id=com.progdigy.cdisplay.free)　[ComicRack](https://play.google.com/store/apps/details?id=com.cyo.comicrack.viewer.free)
 
@@ -85,14 +85,14 @@
 
 ```
 主要：PDF | epub mobi azw/azw3 | Docx RTF
-次要：DjVu|fb2 html chm prc odt cbr cbz webp rar zip
+次要：DjVu| fb2 html chm prc odt cbr cbz webp rar zip
 ```
 
 [KOreader](https://github.com/koreader/koreader/wiki/KOReader%E7%BB%B4%E5%9F%BA)　`Kindle`　`Android`　`Kobo`　`PocketBook`
 
 ```
 主要：PDF | EPUB MOBI | DOC RTF TXT 
-次要：DjVu|XPS FB2 HTML CHM CBZ  ZIP
+次要：DjVu| XPS FB2 HTML CHM CBZ ZIP
 ```
 
 
@@ -124,7 +124,7 @@
 
 ------
 
-　　功能最全，对应的启动速度较慢。仅阅读器[Acrobat Reader DC](https://acrobat.adobe.com/cn/zh-Hans/acrobat/pdf-reader.html)（下载记得取消勾选！）
+　　功能最全，对应的启动速度较慢。仅阅读器[Acrobat Reader DC](https://acrobat.adobe.com/cn/zh-Hans/acrobat/pdf-reader.html)（下载记得取消勾选！[历史版本](https://supportdownloads.adobe.com/product.jsp?platform=windows&product=10)）
 
 　[`Acrobat Pro`](https://acrobat.adobe.com/cn/zh-Hans/acrobat.html)　目前分为XI和DC两个版本，个人选择的是XI。（可在[weibo](https://www.weibo.com/vposy)寻找直装版 (2018SP)）
 
@@ -610,11 +610,15 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 - EPUB  or  Word ： [ABBYY 12/14](https://masuit.com/misc/5)（手动指定OCR语言不要≥4，请选自动）
 
-- 双层文件的校对，请参考[校对双层PDF中的隐藏文本](https://www.cnblogs.com/stronghorse/p/4913425.html)，ABBYY生成的可用[FineReader](https://masuit.com/misc/5)编辑。
+- 版式相对复杂、注释较多，比如有侧注数字的情况下，推荐ABBYY PDFT+
 
-- 未避免误导，“PDF直接扫描”指的是不导出图片，直接对PDF文件进行OCR。
+- 双层文件的校对，请参考[校对双层PDF中的隐藏文本](https://www.cnblogs.com/stronghorse/p/4913425.html)，ABBYY生成的可用[FineReader](https://masuit.com/misc/5)编辑
+
+- 未避免误导，“PDF直接扫描”指的是不导出图片，直接对PDF文件进行OCR
 
   而上文流程优化后的图片，输出时用MODI可能更好，效率更高，精准也有所保障。
+  
+  
 
 
 
@@ -791,11 +795,11 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 　**MAC**[`iBook`](https://support.apple.com/zh-cn/books)（MAC平台的优选，另有PC模仿选择[iBookReader](https://www.xiazaiba.com/html/3284.html)）
 
-　**PC**　[`EPUB File Reader`](http://www.epubfilereader.com/)（对付错版/纯图）[iRead](http://down.tech.sina.com.cn/content/46422.html)　[Sony Reader](http://down.tech.sina.com.cn/content/54688.html)　[FBReader](https://fbreader.org/)　[LovelyReader](http://www.xdowns.com/soft/4/136/2012/Soft_96517.html#)（需[Adobe Air](https://get.adobe.com/cn/air/)）
+　**PC**　[`EPUB File Reader`](http://www.epubfilereader.com/)（对付错版/纯图）[iRead](http://down.tech.sina.com.cn/content/46422.html)　[Sony Reader](http://down.tech.sina.com.cn/content/54688.html)　[LovelyReader](http://www.xdowns.com/soft/4/136/2012/Soft_96517.html#)（需[Adobe Air](https://get.adobe.com/cn/air/)）
 
 　**安卓**　DjVu名目下的应用也支持EPUB，但未经详细测试。
 
-　不推荐Readium、UWP应用和Neat Reader等收费软件，效率和打开方式可能均不及次选。
+　不推荐[Readium](https://readium.org/)、[FBReader](https://fbreader.org/)、UWP应用，[Neat Reader](https://www.neat-reader.cn/)等收费软件。打开方式、效率可能均不及次选。
 
 
 
@@ -895,7 +899,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 **相关站点**
 
-　　　以俄语为主，如[DjVu.Name](http://www.djvu.name/)（软件介绍）[DJVU-программы](http://www.djvu-soft.narod.ru/)（制作导航，有[论坛](http://www.djvu-scan.ru/forum/)）　[OCR форум](http://publ.lib.ru/cgi/forum/YaBB.pl)（OCR相关）
+　　　俄语为主，如[DjVu.Name](http://www.djvu.name/)（软件介绍）[DJVU-программы](http://www.djvu-soft.narod.ru/)（制作导航，有[论坛](http://www.djvu-scan.ru/forum/)）[OCR форум](http://publ.lib.ru/cgi/forum/YaBB.pl)（OCR相关）
 
 　　　前文介绍过的[Scankromsator](https://www.52pojie.cn/thread-831415-1-1.html)也可以导入优化Djvu，但本身完整环境需要安装多个软件，比如
 
@@ -917,7 +921,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
-　　转换：[Pdg2Pic](https://www.cnblogs.com/stronghorse/p/4913182.html) 可转图片或PDF　安卓：[閑讀書Pdg](https://www.lanzous.com/i3zqnkh)　操作需显示虚拟按键（如全面屏、三星实体按键可能不显示）
+　　转换：[Pdg2Pic](https://www.cnblogs.com/stronghorse/p/4913182.html) 可转图片或PDF　安卓：[閑讀書Pdg](https://www.lanzous.com/i3zqnkh) 操作需虚拟按键（如全面屏、三星实体按键可能不显示）
 
 
 
@@ -989,7 +993,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ------
 
-　　即.md文件，[`Typora`](https://www.typora.io/)　[VSCode](https://code.visualstudio.com/)　[CuteMarkEd](http://cloose.github.io/CuteMarkEd/)　[小书匠](http://soft.xiaoshujiang.com/)　[QuickLook](https://github.com/QL-Win/QuickLook)（仅浏览，日常够用）**安卓** [Epsilon Notes](https://play.google.com/store/apps/details?id=com.ekartoyev.enotes)
+　　即.md文件，[`Typora`](https://www.typora.io/)　[VSCode](https://code.visualstudio.com/)　[CuteMarkEd](http://cloose.github.io/CuteMarkEd/)　[小书匠](http://soft.xiaoshujiang.com/)　[QuickLook](https://github.com/QL-Win/QuickLook)（日常浏览）**安卓** [Epsilon Notes](https://play.google.com/store/apps/details?id=com.ekartoyev.enotes)
 
 
 
@@ -1019,7 +1023,11 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ------
 
+　　即.ps文件，PostScript是主要用于电子产业、桌面出版领域的页面描述语言 / 编程语言。
 
+　　Acrobat Pro的Distiller可用于打印PDF。
+
+　　早期系统（XP及之前）可用[Adobe PostScript Printer Drivers for Windows](https://supportdownloads.adobe.com/product.jsp?product=pdrv&platform=win)
 
 
 
@@ -1029,7 +1037,9 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ------
 
-　　[OpenOffice](https://www.openoffice.org/)　[LibreOffice](https://zh-cn.libreoffice.org/)　[WPS](https://www.wps.cn/)　[SoftMaker](https://www.freeoffice.com/zh/)　Office By xb21cn　Office 2007 SP3 PE 3in1 　HxS可用[H2Viewer](https://www.jb51.net/softs/124308.html)
+　　[OpenOffice](https://www.openoffice.org/)　[LibreOffice](https://zh-cn.libreoffice.org/)　[WPS](https://www.wps.cn/)　[SoftMaker](https://www.freeoffice.com/zh/)　HxS可用[H2Viewer](https://www.jb51.net/softs/124308.html)
+
+　　精简：Office By xb21cn　Office 2007 SP3 PE 3in1
 
 　　插件：[EasyCharts](http://easychart.github.io/post/Easycharts/)　[Excel催化剂](https://www.jianshu.com/u/1d0e4a6e400e)　[方方格子](http://www.ffcell.com/home/products.aspx)　[iSlide](https://www.islide.cc/)
 
@@ -1039,7 +1049,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ------
 
-　　即.chm文件，已编译的帮助文件（Compiled Help Manual）win下直接运行即可，移动端需要阅读器
+　　即.chm文件，已编译的帮助文件（Compiled Help Manual）win下可直接运行，移动端需要阅读器
 
 　　无特殊需求，[`KOreader`](https://github.com/koreader/koreader/wiki/KOReader%E7%BB%B4%E5%9F%BA)即可。
 
@@ -1075,9 +1085,9 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ## 实用工具
 
-除词典翻译和字体外，本章有不少链接指向破解，因此CC协议只包含引用链接的文本，不含链接本身。
+　　除词典翻译和字体外，本章有不少链接指向破解，因此CC协议只包含引用链接的文本，不含链接本身。
 
-免责声明：仅提供原页面链接，不属于转载。
+　　免责声明：仅提供原页面链接，不属于转载。
 
 
 
@@ -1095,7 +1105,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 > **外语** [`沪江小D`](https://dict.hjenglish.com/)　[有道词典](http://www.youdao.com/)　[剑桥词典](https://dictionary.cambridge.org/)　[牛津在线词典](https://en.oxforddictionaries.com/)
 
-其他知名词典与百度直接出结果（百度词典）等不再赘述。另推荐　[古诗文网](https://www.gushiwen.org/)　[教育部重編國語辭典修訂本](http://dict.revised.moe.edu.tw/cgi-bin/cbdic/gsweb.cgi?ccd=tVvLuW&o=e0&sec=sec1&index=1)
+　其他知名词典与百度直接出结果（百度词典）等不再赘述。另推荐　[古诗文网](https://www.gushiwen.org/)　[教育部重編國語辭典修訂本](http://dict.revised.moe.edu.tw/cgi-bin/cbdic/gsweb.cgi?ccd=tVvLuW&o=e0&sec=sec1&index=1)
 
 
 
@@ -1103,7 +1113,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 > [`汉文博士`](http://hanbox.cnblogs.com/)　强烈推荐，支持多种方式检索生僻古难字。使用`构型`即可满足绝大部分需求。
 
-> [`GoldenDict`](https://sourceforge.net/projects/goldendict/files/)　[`灵格斯词霸`](http://www.lingoes.cn/)　[`有道词典纯净版`](http://blog.sina.com.cn/s/blog_89a729a40102wjwf.html)
+> [`GoldenDict`](https://sourceforge.net/projects/goldendict/files/)([For XP](https://www.pdawiki.com/forum/forum.php?mod=viewthread&tid=34284))　[`灵格斯词霸`](http://www.lingoes.cn/)　[`有道词典纯净版`](http://blog.sina.com.cn/s/blog_89a729a40102wjwf.html)
 
 
 
@@ -1113,7 +1123,11 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 [汉语辞书集锦djvu]()（提取码`q5lj`）原载于读书园地。同类词典可在百度、国学数典、小浣熊等骡链镜像寻找。
 
-关于[GoldenDict](http://goldendict.org/)、[MDict](https://www.mdict.cn/wp/?lang=zh)的使用与词库，请参考[掌上百科](https://www.pdawiki.com/forum/)社区（[星际译王词库](http://download.huzheng.org/)、GoldenDict的[获取词典](http://goldendict.mobi/dictionaries.php)）
+
+
+[GoldenDict](http://goldendict.org/)、[MDict](https://www.mdict.cn/wp/?lang=zh)等软件的词库、应用，可参考[掌上百科](https://www.pdawiki.com/forum/)社区。（[星际译王词库](http://download.huzheng.org/)、[GoldenDict](http://goldendict.mobi/)的[获取词典](http://goldendict.mobi/dictionaries.php)）
+
+
 
 
 
@@ -1125,45 +1139,47 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 **安卓**
 
-　　用的少，中英文都是[`ColorDict`](https://soft.shouji.com.cn/down/22571.html)，静读天下所需。也可用Colordict接口的如[深蓝词典](http://www.ssdlsoft.com/bluedict/news/2018-12-11/176.html)/[欧路词典](https://www.eudic.net/v4/en/app/eudic)
+　　用的少，中英文都是[`ColorDict`](https://soft.shouji.com.cn/down/22571.html)，静读天下所需。也可用Colordict接口的如[深蓝词典](http://www.ssdlsoft.com/bluedict/news/2018-12-11/176.html) / [欧路词典](https://www.eudic.net/v4/en/app/eudic)
 
+　　[平典](https://www.pdawiki.com/forum/forum.php?mod=viewthread&tid=30675)　⭐掌上百科网友开发，借鉴深蓝词典，支持mdx。老机型/系统兼容稍逊
 
+　　[GoldenDict](http://goldendict.mobi/)　不支持mdx，未注册限制5词典。1.6破解需Lucky Patcher，[2.x](https://4pda.ru/forum/index.php?showtopic=267685)仍有小毛病。不推荐
 
-[平典](https://www.pdawiki.com/forum/forum.php?mod=viewthread&tid=30675)　⭐掌上百科网友开发，借鉴深蓝词典，支持mdx。部分机型/系统可能存在兼容问题。
-
-[GoldenDict](https://sourceforge.net/projects/goldendict/files/)　不支持mdx，未注册限制5个词典，1.6.5破解需ROOT+Lucky Patcher，2.0仍有小毛病，不推荐。
-
-[Duden Wörterbücher](https://play.google.com/store/apps/details?id=com.duden.container)　德语，每本10+欧元。需要ROOT+Lucky Patcher 1.7.x 破解内购，仅推荐特殊需求用户。
+　　[Duden Wörterbücher](https://play.google.com/store/apps/details?id=com.duden.container)　德语，每本€10+。破解需Lucky Patcher 1.7.x 破解内购。
 
 
 
 **iOS**
 
-平常用的少则是很常见的新华字典、牛津英汉之类，不适合推荐。
+　　用的更少，通常是新华字典、牛津英汉之类的官方APP，不适合推荐。
 
-[Duden Wörterbüche](https://itunes.apple.com/cn/app/id583849946)可能需要越狱，参见[此文章](https://bbs.feng.com/read-htm-tid-8405740.html)。
+　　[有道](https://apps.apple.com/cn/app/id353115739)	[金山](https://apps.apple.com/cn/app/jin-shan-ci-ba/id348737611)	[沪江](https://apps.apple.com/cn/app/id481584414)	[海词](https://apps.apple.com/cn/app/id443374471)
+
+　　[欧陆词典](https://apps.apple.com/cn/app/ou-lu-ying-yu-ci-dian-eudic/id393670998)　[MDict](https://apps.apple.com/cn/app/p-m-mdict-free/id389083586)	[Dictionary Universal](https://apps.apple.com/cn/app/dictionary-universal/id312088272)
+
+　　[Duden Wörterbüche](https://itunes.apple.com/cn/app/id583849946)可能需要越狱，参见[此文章](https://bbs.feng.com/read-htm-tid-8405740.html)。
 
 
 
-口语翻译推荐[`VoiceTra`](http://voicetra.nict.go.jp/en/)　下载：[GoolgePlay](https://play.google.com/store/apps/details?id=jp.go.nict.voicetra&hl=en)　[AppStore](https://itunes.apple.com/cn/app/id581137577?mt=8)
+　　口语翻译推荐[`VoiceTra`](http://voicetra.nict.go.jp/en/)　下载：[GoolgePlay](https://play.google.com/store/apps/details?id=jp.go.nict.voicetra&hl=en)　[AppStore](https://itunes.apple.com/cn/app/id581137577?mt=8)
 
 
 
 #### 输入法
 
-商业输入法多数支持手写入不再赘述，部分也支持拆字输入（但可能不如[字海](http://yedict.com/download/)做的好）
+　　商业输入法多支持手写入不再赘述，部分也支持拆字输入（但可能不如[字海](http://yedict.com/download/)做的好）
 
-此处仅推荐 手写：[`逍遥笔单文件版`](http://www.epinv.com/post/4854.html)　笔画部件篆书：[`中华书局古联输入法`](http://www.ancientbooks.cn/helpcore?input)（[宋体字库](http://www.ancientbooks.cn/helpcore?font)）
+　　此处仅推荐 手写：[`逍遥笔单文件版`](http://www.epinv.com/post/4854.html)　笔画部件篆书：[`中华书局古联输入法`](http://www.ancientbooks.cn/helpcore?input)（[宋体字库](http://www.ancientbooks.cn/helpcore?font)）
 
 
 
 #### 本地翻译
 
-目前仅推荐调用互联网公司翻译接口的小软件，专业翻译软件、写作出版翻译助手和软件本地化暂不收录。
+　　目前仅推荐调用互联网公司接口的小软件，专业翻译、写作出版翻译助手和软件本地化暂不收录。
 
-如[QTranslate](http://quest-app.appspot.com/)（[不翻墙下载](http://www.pc6.com/softview/SoftView_54241.html)），前文介绍过的[`CopyTranslator`](https://www.cnblogs.com/elliottzheng/p/9060159.html)　[SCITranslate10 VIP](https://www.52pojie.cn/thread-849027-1-1.html)等等。
+　　如[QTranslate](http://quest-app.appspot.com/)（[不翻墙下载](http://www.pc6.com/softview/SoftView_54241.html)），前文介绍过的[`CopyTranslator`](https://www.cnblogs.com/elliottzheng/p/9060159.html)　[SCITranslate10 VIP](https://www.52pojie.cn/thread-849027-1-1.html)等等。
 
-包含翻译功能的截图OCR软件详见之后章节。
+　　包含翻译功能的截图OCR软件详见[截图工具](#%E6%88%AA%E5%9B%BEOCR)一节。
 
 
 
@@ -1173,7 +1189,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ------
 
-　　即OCR。常用请参考扫描书优化，也就是ABBYY和MODI……
+　　即OCR。常用请参考[扫描版优化](#OCR)，也就是ABBYY和MODI……
 
 　　但有些时候只是截图或者手机拍一下完全没必要用这些，还是要根据使用环境自行选择
 
@@ -1212,10 +1228,10 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 **在线**
 
 - PDF：[迅捷PDF在线版](https://app.xunjiepdf.com/ocr)等在线PDF处理支持
-- 中文：[极客扫描仪](http://www.gkocr.com/web/index.html)、[OCR Maker](http://www.ocrmaker.com/)、[诚华OCR](https://zhcn.109876543210.com/) 、[Super Tools](https://ocr.wdku.net/)
-- 英文：[New OCR](https://www.newocr.com/)、[Onnline OCR](https://www.onlineocr.net/)
-- 多语：[imagetotxt](http://www.imagetotxt.com/en/)、[quick-js-ocr](https://github.com/gongpeione/quick-js-ocr)（[例子](https://gongpeione.github.io/quick-js-ocr/example/)）、[tesseract.js](https://github.com/naptha/tesseract.js)（[官网](http://tesseract.projectnaptha.com/)）
-- 扩展：[取字](http://willingstudio.com/)、[CopyFish](https://a9t9.com/copyfish)
+- 中文：[极客扫描仪](http://www.gkocr.com/web/index.html)　[OCR Maker](http://www.ocrmaker.com/)　[诚华OCR](https://zhcn.109876543210.com/) 　[Super Tools](https://ocr.wdku.net/)
+- 英文：[New OCR](https://www.newocr.com/)　[Onnline OCR](https://www.onlineocr.net/)
+- 多语：[imagetotxt](http://www.imagetotxt.com/en/)　[quick-js-ocr](https://github.com/gongpeione/quick-js-ocr)（[例子](https://gongpeione.github.io/quick-js-ocr/example/)）　[tesseract.js](https://github.com/naptha/tesseract.js)（[官网](http://tesseract.projectnaptha.com/)）
+- 扩展：[取字](http://willingstudio.com/)　[CopyFish](https://a9t9.com/copyfish)
 - 微信：传图识字、微软AI识图截图
 
 
@@ -1242,7 +1258,7 @@ Mac：[Cisdem](https://www.cisdem.com/pdf-converter-ocr-mac.html)（69元）
 
 Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=show&redirect=OCRFeeder)→ 不可能加入Linux平台和开发包简介的！
 
-开源库：[tesseract](http://code.google.com/p/tesseract-ocr/)、[Grocr](http://vision.ucsd.edu/~kai/grocr/)、[OCRchie](http://http.cs.berkeley.edu/~fateman/kathey/ocrchie.html)、[Ocrad](http://directory.fsf.org/ocrad.html)、[Clara OCR](https://directory.fsf.org/wiki/Clara_OCR)、[OCRE(OCR Easy)](http://lem.eui.upm.es/ocre.html)、[GOCR](https://sourceforge.net/projects/jocr/)
+开源库：[tesseract](http://code.google.com/p/tesseract-ocr/)　[Grocr](http://vision.ucsd.edu/~kai/grocr/)　[OCRchie](http://http.cs.berkeley.edu/~fateman/kathey/ocrchie.html)　[Ocrad](http://directory.fsf.org/ocrad.html)　[Clara OCR](https://directory.fsf.org/wiki/Clara_OCR)　[OCRE(OCR Easy)](http://lem.eui.upm.es/ocre.html)　[GOCR](https://sourceforge.net/projects/jocr/)
 
 开源简介：[ocrgrid.org](http://www.ocrgrid.org/)（导航）[OCR识别的开源分析](https://blog.csdn.net/luojun2007/article/details/51614133)
 
@@ -1250,7 +1266,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **附录**
 
-以前的测试结果（2018年；i5-4590 + 8G + Windows 10 Enterprise x64 1709/1803）
+　　以前的测试结果（2018年；i5-4590 + 8G + Windows 10 Enterprise x64 1709/1803）
 
 | 软件名                 | 结果                       | 备注               |
 | ---------------------- | -------------------------- | ------------------ |
@@ -1269,7 +1285,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 ------
 
-纯拉清单，排名不分先后。包含代码支持，但不含`十六进制`/`代码整理`/`编程辅助`相关工具。绝不可能推荐[`Emacs`](http://www.gnu.org/software/emacs/)！
+纯拉清单，排名部分先后。包含代码支持，不含`十六进制`/`代码整理`/`编程辅助`相关。绝不可能推荐[`Emacs`](http://www.gnu.org/software/emacs/)！
 
 目前也不含写作软件……
 
@@ -1313,11 +1329,11 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 ------
 
-[F-Stop](https://soft.shouji.com.cn/down/25010.html)　快速滑动没有同类的模糊变清晰过程，尤其是大图（特大图可能闪进度条）库管理支持排除，综合体验极佳。
+[F-Stop](https://soft.shouji.com.cn/down/25010.html)　快速滑动没有同类的模糊变清晰过程，尤其是大图（特大可能闪进度条）库管理支持排除，综合体验极佳
 
 [快图浏览](https://www.coolapk.com/apk/com.alensw.PicFolder)　备用，同时也是很好的选择。旋转方便，加载快。另外，漫画软件也可用于看图。
 
-　　由于F-Stop+ES/Soild Explorer 完全够用，很少接触其他软件，故无法面向所有需求推荐。
+　　由于F-Stop + ES/Soild/MiX Explorer 完全够用，很少接触其他软件，故无法面向所有需求推荐。
 
 ------
 
@@ -1333,13 +1349,13 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 ------
 
-多数看图软件关联即可，少数如PSD、WebP才需要此支持。
+　　多数看图软件关联即可，少数如PSD、WebP才需要此支持。
 
-常见比如[Ardfry Codec](http://www.epinv.com/post/3149.html)　[WebP Codec](https://www.free-codecs.com/download/webp_codec.htm)　[SageThumbs](https://sourceforge.net/projects/sagethumbs/)　[MysticThumbs](http://www.epinv.com/post/5681.html)　[FastPictureViewer Codec Pack](https://www.52pojie.cn/thread-646965-1-1.html)
+　　常见比如[Ardfry Codec](http://www.epinv.com/post/3149.html)　[WebP Codec](https://www.free-codecs.com/download/webp_codec.htm)　[SageThumbs](https://sourceforge.net/projects/sagethumbs/)　[MysticThumbs](http://www.epinv.com/post/5681.html)　[FastPictureViewer Codec Pack](https://www.52pojie.cn/thread-646965-1-1.html)
 
-但各有特点，不是收费、功能单一，就是占用太大……完全根据个人需求选择。
+　　各有特点：不是收费、功能单一，就是占用太大……完全根据个人需求选择。
 
-前文提到的[QuickLook](https://github.com/QL-Win/QuickLook)/[Seer](https://sourceforge.net/projects/ccseer/)也属此类，而Mac下有`preview`不需要……
+　　前文提到的[QuickLook](https://github.com/QL-Win/QuickLook)/[Seer](https://sourceforge.net/projects/ccseer/)也属此类，而Mac下有`Preview`不需要……
 
 
 
@@ -1367,7 +1383,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 > [Multi-service](http://www.iqdb.org/)　[ascii2d](http://www.ascii2d.net/imagesearch)　[SauceNAO](http://saucenao.com/)　[WAIT: What Anime Is This?](https://trace.moe/)
 
-其他如：[TinEye](http://www.tineye.com/)　[Picitup](http://www.picitup.com/)　　[搜狗图片](http://pic.sogou.com/#)　[次元搜图引擎](https://img.ciyuan.bi/)
+其他如：[TinEye](http://www.tineye.com/)　[Picitup](http://www.picitup.com/)　[搜狗图片](http://pic.sogou.com/#)　[次元搜图引擎](https://img.ciyuan.bi/)
 
 安卓可用[以图搜图](https://www.coolapk.com/apk/rikka.searchbyimage)　淘宝、[Pinterest](https://www.pinterest.com/)与同类图片站也包含搜图功能，但局限于站内，其余可参考附件书签。
 
@@ -1392,6 +1408,8 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 此外还有[Apowersoft Screen Recorder](http://www.carrotchou.blog/125.html) [MSI Afterburner](https://cn.msi.com/page/afterburner)　等适用于不同场景。
 
 截录功能强调个人需求，不必执着于推荐。 毕竟平常QQ就够了……
+
+
 
 
 
@@ -1426,7 +1444,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **播放器**
 
-> 视频　[`MPC-BE`](https://sourceforge.net/projects/mpcbe/)　[`MPC-HC`](https://mpc-hc.org/)　+　[`XySubFilter`](https://github.com/Cyberbeing/xy-VSFilter/releases)
+> 视频　[`MPC-BE`](https://sourceforge.net/projects/mpcbe/)　[`MPC-HC`](https://mpc-hc.org/) + [`XySubFilter`](https://github.com/Cyberbeing/xy-VSFilter/releases)
 
 **其他常用**[PotPlayer](http://potplayer.daum.net/?lang=zh_CN)（[闻雷整合](http://potplayer.ys168.com/)（[最新发布](https://pan.lanzou.com/b112173/)）/[莫妮卡汉化](https://pan.baidu.com/s/1eUfEIt0 )（提取码`r4iy`））[MPlayer](http://www.mplayer.org.cn) 　[QQ Player](https://www.xiazaiba.com/dl/1.html)　[VLC Player](https://www.videolan.org/)
 
@@ -1450,11 +1468,11 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **字幕编辑**
 
-　　因为面向初学者，最多是修订小错，只简单介绍几个常用工具：
+初学者最多是修订小错，只简单介绍几个工具：
 
-[mkvtoolnix](https://mkvtoolnix.download/)+[gMKVExtractGUI](https://sourceforge.net/projects/gmkvextractgui/)　MKV工具及其导出程序的GUI，用来提取字幕。
+[mkvtoolnix](https://mkvtoolnix.download/)+[gMKVExtractGUI](https://sourceforge.net/projects/gmkvextractgui/)　MKV工具及其导出程序的GUI，用来提取字幕
 
-[Batch Subtitles Converter](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter)　优秀的字幕格式转换，常用于`SRT`转`ASS`。新版本收费，免费的[1.24版](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter/Download)够用。
+[Batch Subtitles Converter](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter)　字幕格式转换，常用于`SRT`转`ASS`。新版本收费，免费[1.24版](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter/Download)够用
 
 [Aegisub](http://www.aegisub.org/)　开源免费跨平台的`ASS`字幕编辑工具
 
@@ -1462,9 +1480,9 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 
 
-　　什么，想把`idx`/`sub`/`sup`转换成文本字幕？
+什么，想把`idx`/`sub`/`sup`转换成文本字幕？　[`IdxSubOcr`](https://www.cnblogs.com/stronghorse/p/4913470.html) 老马出品的OCR转`SRT`软件。　
 
-　　[`IdxSubOcr`](https://www.cnblogs.com/stronghorse/p/4913470.html) 老马出品的OCR转`SRT`软件。　　[BDSup2Sub](https://www.videohelp.com/software/BDSup2Sub)功能如名。
+
 
 
 
@@ -1516,7 +1534,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **站酷平台**
 
-[站酷字体合集](https://www.zcool.com.cn/special/zcoolfonts/)　站酷庆科黄油体 | 站酷文艺体 | 站酷小薇LOGO体 | 站酷酷黑体 | 站酷意大利体 | 站酷快乐体 | 站酷高端黑体
+[站酷字体合集](https://www.zcool.com.cn/special/zcoolfonts/)　站酷 - 庆科黄油体 | 文艺体 | 小薇LOGO体 | 酷黑体 | 意大利体 | 快乐体 | 高端黑体
 
 [庞门正道标题体2.0](https://www.zcool.com.cn/work/ZMjA0MDg0MDA=.html)　[手书体中文简体](https://www.zcool.com.cn/work/ZMjI2MDk1MDg=.html)　[沐瑶软笔手写体](https://www.zcool.com.cn/work/ZMjg5MjAwMDQ=.html)　[杨任东竹石体](http://www.hellofont.cn/font-detail?fontid=3019)
 
@@ -1524,7 +1542,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **有限授权**
 
-[方正字库](https://www.foundertype.com/index.php/FindFont/searchFont?keyword=%E5%85%8D%E8%B4%B9)　黑体、书宋、仿宋、楷体，可申请部分商用授权。
+[方正字库](https://www.foundertype.com/index.php/FindFont/searchFont?keyword=%E5%85%8D%E8%B4%B9)　黑体、书宋、仿宋、楷体，可申请部分商用授权。可用[字加](http://www.foundertype.com/index.php/Index/ftXplorer.html)获取管理查看授权。
 
 [京东字库](https://zi.jd.com/)　汉仪字体，仅京东平台商用。
 
@@ -1610,9 +1628,9 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 　　个人习惯搜索到软件后，追寻主题/官网/汉化/破解源，然后遍历这些源，可能有需求的下载试用，保留适用的。大部分时候不依赖于源，但至少也知道去哪里找——甚至可以直接翻软件站类别。国内的不提，国外的可以试试[MajorGeeks](https://www.majorgeeks.com/)。
 
-　　在[SourceForge](https://sourceforge.net/)、[Github](https://github.com)、[Fosshub](https://www.fosshub.com/)等开源/代码/软件平台上也有太多好项目，可以直接看类别Top20。更不要提伟大的[GNU](http://www.gnu.org/)与自由软件。以前喜欢便携软件，通过[PortableApps](https://portableapps.com/)、[精品绿色便携软件](https://www.portablesoft.org/)了解到不少。尤其是前者包含很多免费/开源软件。
+　　在[SourceForge](https://sourceforge.net/)、[Github](https://github.com)、[Fosshub](https://www.fosshub.com/)等开源/代码/软件平台上也有太多好项目，可以直接看类别Top20。更不要提伟大的[GNU](http://www.gnu.org/)与[自由软件](http://www.gnu.org/philosophy/free-sw.zh-cn.html)。以前也喜欢便携软件，通过[PortableApps](https://portableapps.com/)、[精品绿色便携软件](https://www.portablesoft.org/)了解到不少。尤其是前者有很多免费/开源软件。
 
-　　对于某些类别，比如安全、破解、系统、美化、MAC、手机……和许多常见商业软件/需求（如PS/出版）论坛可能是比较好的方式。当然，这些方式不适用于所有人，尤其可能需要翻墙。
+　　对某些类别，如安全、破解、系统、美化、MAC、手机……许多常见商业软件/需求（如PS/出版）论坛可能是比较好的方式。当然，这些方式不适用于所有人，尤其可能需要翻墙。
 
 　　好吧虽然现在百度不用脚本没法用了……大家用的可能是必应/谷歌。
 
@@ -1638,29 +1656,39 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 [`Zotero`](https://www.zotero.org/)
 
-　　开源工具，功能全面。支持插件、网页保存/导入（如豆瓣、维基、谷歌学术）、附件、文献可视化等，[中文简介](https://www.zotero.org/support/zh/quick_start_guide)。
+　　开源工具，功能全面。支持插件、网页保存/导入（如豆瓣、维基、谷歌学术）、附件、文献可视化等。
+
+　　简介：[快速指南](https://www.zotero.org/support/zh/quick_start_guide)　插件：[Qnotero](https://www.cogsci.nl/qnotero)　[ZotFile](http://zotfile.com/)　[Paper Machine](http://papermachines.org/)　[Zotero Translator Test Results](http://zotero-translator-tests.s3-website-us-east-1.amazonaws.com/)
 
 [`EndNote`](https://www.endnote.com/)
 
-　　最常用的管理软件。部分专业有顶级课题组的库可以订阅。常从[丁香园](http://www.dxy.cn/bbs/board/10/2905)获取汉化，[落尘之木 X9 CHS Patch](https://www.luochenzhimu.com/archives/4055.html)。
+　　最常用的管理软件。部分专业有顶级课题组的库可以订阅。
+
+　　常从[丁香园](http://www.dxy.cn/bbs/board/10/2905)获取汉化，[落尘之木 X9 CHS Patch](https://www.luochenzhimu.com/archives/4055.html)
 
 [`NoteExpress`](http://www.inoteexpress.com/aegean/)　
 
-　　国产软件，特色是层级管理与本地文件夹同步。但智能更新题录一般，常要手动模糊搜索更新。
+　　国产软件，特色是层级管理与本地文件夹同步。
+
+　　智能更新题录速度慢效果一般，常要手动+模糊搜索更新。
 
 
+
+[Docear](http://www.docear.org/)　
+
+　　= [JabRef](http://www.jabref.org/)+[Freeplane](https://www.freeplane.org/wiki/index.php/Home)，兼具其长处。未曾尝试，借用“[砖工在简书](https://www.jianshu.com/u/5c88bc0162b9)”同学的[使用心得](https://www.jianshu.com/p/63b72c18427c)。
+
+　　Jabref = 开源引文管理，与LaTex对接兼容极好。Freeplane = 开源思维导图工具
 
 [Mendeley](https://www.mendeley.com/)
 
 [ReadCube](https://www.readcube.com/)　基础版免费，强调PDF的交互管理。不过，**登录必须翻墙**……
 
-[Docear](http://www.docear.org/)　= [JabRef](http://www.jabref.org/)+[Freeplane](https://www.freeplane.org/wiki/index.php/Home)，兼具其长处。未曾尝试，借用“[砖工在简书](https://www.jianshu.com/u/5c88bc0162b9)”同学的[使用心得](https://www.jianshu.com/p/63b72c18427c)。
-
-[Jabref](http://www.jabref.org/)　开源引文管理，与LaTex对接兼容极好。
+　　[Papers](http://www.readcube.com/papers/)
 
 [NoteFirst](http://www.notefirst.com/)　[CNKI E-Study](http://elearning.cnki.net/)　[医学文献王](http://refer.medlive.cn/)
 
-RefWorks　Qnotero　Papers2
+[RefWorks](www.refworks-cos.com/refworks)　
 
 
 
@@ -1696,9 +1724,9 @@ RefWorks　Qnotero　Papers2
 
 **语料**　[AntConc](http://www.laurenceanthony.net/software/antconc/)　[Wordless](https://github.com/BLKSerene/Wordless)　[WordSmith](https://lexically.net/wordsmith/)([4.0 FREE](https://www.lexically.net/wordsmith/version4/))　[Text Statistics Analyzer](https://vovsoft.com/software/text-statistics-analyzer/)　
 
-　　　　　[SCWS 中文分词](http://www.xunsearch.com/scws/)　[“结巴”中文分词](https://github.com/fxsjy/jieba)　[赵海 - 软件](http://bcmi.sjtu.edu.cn/~zhaohai/index.ch.html#Software)
+　　　[SCWS 中文分词](http://www.xunsearch.com/scws/)　[“结巴”中文分词](https://github.com/fxsjy/jieba)　[赵海 - 软件](http://bcmi.sjtu.edu.cn/~zhaohai/index.ch.html#Software)
 
-ROSTCM6　
+ROSTCM6
 
 [SiNLP](https://www.linguisticanalysistools.org/sinlp.html)　[TAALES](https://www.linguisticanalysistools.org/taales.html)　[FudanNLP](https://github.com/FudanNLP/fnlp)→[FastNLP](https://github.com/fastnlp/fastNLP)　[GluonNLP](https://gluon-nlp.mxnet.io/)
 
@@ -1724,15 +1752,15 @@ ROSTCM6　
 
 ------
 
-**常见的水印**
+**常见水印**
 
-1. 页眉页脚有软件名、网址、QQ号等一行文字的文字型（软件如pdf打印机，有时是中央45度（如爱学术））
+1. `文字型`　页眉页脚有软件名、网址、QQ号等文字（软件如pdf打印机，有时是中央45度（如爱学术））
 
-2. 页面中央或边角的logo图形的图片型
+2. `图片型`　页面中央 / 边角有Logo图像的
 
-3. 右下角灰色暗块PDG字样的写入图片的水印
+3. `写入图片`　如右下角灰色暗块PDG字样
 
-4. PDF-XChange Viewer为代表的复杂对象水印
+4. `复杂对象`　PDF-XChange Viewer虚拟打印为代表
 
 　分辨类型可用老版本福昕编辑器（[1.2/2.1/5.0](https://www.lanzous.com/i3erzva)）点选对象
 
@@ -1747,17 +1775,17 @@ ROSTCM6　
 
 ------
 
-　　导出图片、PitStop、pdftoy流过滤、去水印软件（如[PDF水印清理专家](http://www.liyusoft.com/pdfwr)，PDF Watermark Revmoer）等
+　　导出图片、PitStop、pdftoy流过滤、`ComicEnhancerPro`（下文缩略为`CEP`）[PDF水印清理专家](http://www.liyusoft.com/pdfwr)等
 
-　　由于去水印软件通常收费，功能有限或无破解，一般推荐使用[`Acrobat+PitStop`](https://www.jb51.net/softs/624889.html)
+　　去水印软件通常收费、功能有限或无破解，一般推荐使用[`Acrobat+PitStop`](https://www.jb51.net/softs/624889.html)
 
 
 
 **PitStop** 可解决`扫描版`的`1` `2` `4`， `文字版`的`1` `2` 
 
-- 可选矩形或绘制多边形区域、清除对象的类型、是否包含重叠
+- 可选矩形、绘制多边形区域，清除对象类型、是否包含重叠
 - 类 2 若是文字版下面盖图，区域选定后移除对象只选图像即可。
-- 类 4 若是极为复杂对象可能需要勾选重叠并多次操作，会导致重叠的文字消失，因此对`文字版`的效果不一定好。
+- 类 4 若极为复杂，可能需要勾选重叠并多次操作。重叠文字可能消失，因此对`文字版`效果不一定好。
 
 ```
 选择区域 → 全局更改 → 标准 → 移除 → 移除图形 → 吸管图标选择从选区获取区域 → 运行
@@ -1768,10 +1796,10 @@ ROSTCM6　
 **导出图片** 可解决`扫描版`的`1` `2` `3`
 
 - 类 1 导出图片即可
-- 类 2 导出后若是大量相同图片可用文件查重批量删除
-- 类 3 导出后用`ComicEnhancerPro`批量提高图片亮度，再适当提高伽玛修补表现
-- 类 3 若是彩色`ComicEnhancerPro` `通道`→`替换`能指定阀值替换。也可用`通道`→`通道互换`、`通道混合`先处理。
-- 导出原图发现每页多图拼成的，可以用`PDF补丁丁`的尝试合并相同页面的图片。
+- 类 2 导出后若水印有大量相同图片，可用文件查重批量删除
+- 类 3 导出后用`CEP`批量提高图片亮度，再适当提高伽玛修补表现
+- 类 3 若是彩色`CEP` `通道`→`替换`能指定阀值替换。也可用`通道`→`通道互换`、`通道混合`先处理
+- 导出原图发现每页多图拼成的，可以用`PDF补丁丁`的尝试合并相同页面的图片
 
 ```
 用“PDF补丁丁”导出图片后重新封装，也可用“FreePic2Pdf”封装。
@@ -1789,7 +1817,7 @@ ROSTCM6　
 
 1. 对切前，边缘有较大黑边/色块、图片均大致相同容易去除，可批量裁剪去边。反之则对切后去边
 
-   也可以用`ComicEnhancerPro`（下文缩略为`CEP`）的手动选区范围。
+   若比较规则，建议用`CEP`的手动选区范围
 
 2. 对切大致相同用分割软件；左右不同，可尝试用`晨晨双页扫描图片分割器`
 
@@ -1805,9 +1833,13 @@ ROSTCM6　
 
    
 
-若是台版书，PDF阅读器很少支持从左到右翻页，但漫画阅读软件（主要指安卓）多数支持，[KOreader](https://github.com/koreader/koreader/wiki/KOReader%E7%BB%B4%E5%9F%BA)也支持。若要单页连续的顺序正确，切割后文件名数字序列化再奇偶对调即可。如[Advanced Renamer](https://www.52pojie.cn/thread-791060-1-1.html) 支持数字文件名加减，可用于对调。
+　　若是台版书，PDF阅读器很少支持从左到右翻页，但漫画阅读器（安卓为主）多数可以，[KOreader](https://github.com/koreader/koreader/wiki/KOReader%E7%BB%B4%E5%9F%BA)也支持。
 
-文字扭曲等高级优化暂无法介绍，见谅。
+　　台版书若要单页连续的顺序正确，切割后文件名数字序列化再奇偶对调即可。前文介绍过的[ReNamer](https://www.52pojie.cn/thread-840043-1-1.html)序列化方便，[Advanced Renamer](https://www.52pojie.cn/thread-791060-1-1.html)对调方便（支持数字文件名加减）
+
+
+
+　　文字扭曲等高级优化暂无法介绍，见谅。
 
 
 
@@ -1818,7 +1850,7 @@ ROSTCM6　
 
 ------
 
-　　由于不可避免地导致盗版，本文**点到为止**，详细参考打包文件内可能附带的Firefox书签或doc。
+　　由于不可避免地导致盗版，本文**点到为止**，详细参考附件Firefox书签或doc。
 
 　　基本常识：`书名` + `作者`/ `出版社` / `年代` 等多关键词多次搜索，因重名和引擎问题，可能单纯书名无结果。
 
@@ -1828,13 +1860,13 @@ ROSTCM6　
 
 [鸠摩搜书](https://www.jiumodiary.com/)　目前最全面的聚合搜索，有时需要尝试多种文件名组合。
 
-[云盘精灵](https://www.yunpanjingling.com/)　百度网盘搜索　*收费*　但效果很好，适合已知有百度网盘资源但加密或失效的。多数资源1豆，1豆最贵3分。
+[云盘精灵](https://www.yunpanjingling.com/)　百度网盘搜索【收费】效果很好，适合已知有百度网盘资源但加密失效的。多数资源1豆，1豆最贵3分。
 
 [百度学术](http://xueshu.baidu.com/)　用于确认文献源，太新的可能没有收录。也会显示免费地址，如果有的话。
 
-[西林街](http://www.xilinjie.com/)　聚合搜索　*收费*　效果一般，对微盘爱问的结果比较好，适合已知可能有的。免费只能看有限页面。
+[西林街](http://www.xilinjie.com/)　聚合搜索【收费】效果一般，对微盘爱问结果较好，适合已知可能有的。免费只能看有限页面。
 
-[虫部落](http://magnet.chongbuluo.com/)　多个搜索网站的聚合搜索。[胖次](https://www.panc.cc/)好用的时候常用，切换方便，但现在意义不大。
+[虫部落](http://magnet.chongbuluo.com/)　多个搜索网站的单页聚合。[胖次](https://www.panc.cc/)好用的时候常用，切换方便。现在意义不大。
 
 
 
@@ -1844,11 +1876,11 @@ ROSTCM6　
 
 [Readfree](http://magnet.chongbuluo.com/)　邀请码，有[豆瓣扩展](https://chrome.google.com/webstore/detail/readfree-%E4%BC%A0%E9%80%81%E9%97%A8/nnijmebffagpcclklhofdkjeimnmckjp)，签到积分制。每个文件下载消耗1积分，充值20元可得2000积分。
 
-均为Chorme扩展，Firefox可以自己注册账号上传签名后安装自用（mlook的提醒功能会失效）*Kindle其他网站详见书签*
+均为Chorme扩展，Firefox可以自己注册账号上传签名后安装（mlook提醒功能失效）*Kindle其他网站详见书签*
 
 
 
-**通常鸠摩搜书没有即可放弃。**
+**通常鸠摩搜书没有即可放弃**
 
 
 
@@ -1872,7 +1904,7 @@ ROSTCM6　
 
 注：在豆瓣、亚马逊、读秀、图书馆参考联盟，想要精准的找到某书，推荐使用ISBN（老书的统一书号亦能）
 
-　　有时书名/书名+作者无结果也不一定真没有，可以试试ISBN。见过不少次书友求书搜不到了……
+　　有时书名/书名+作者无结果也不一定真没有，可以试试ISBN。见过不少次书友搜不到了…
 
 ------
 
@@ -1888,11 +1920,108 @@ ROSTCM6　
 
 　　通常到当地市图书馆办张读者证即可使用各类数字馆藏服务，若想足不出户：
 
-[浙江省图书馆](http://www.zjlib.cn/) 支付宝搜索其生活号注册 [广西壮族自治区图书馆](http://www.gxlib.org.cn/) 在线手机号注册
+[浙江省图书馆](http://www.zjlib.cn/)　支付宝生活号注册　[绍兴图书馆](http://www.sxlib.com/)　支付宝生活号注册
 
-[贵州省图书馆](http://www.gzlib.com.cn/) 可能杳无音讯，仅作收录 [贵州数字图书馆](http://www.gzlib.org/) 右上角在线领卡注册
+[贵州数字图书馆](http://www.gzlib.org/)　在线领卡注册　　[广西壮族自治区图书馆](http://www.gxlib.org.cn/)　在线注册　
 
 ------
+
+
+
+
+
+
+
+#### 帐号入口
+
+------
+
+　　收录公开知网、读秀等账号入口的院校/图书馆。图书馆帐号若失效可待其更新。
+
+
+
+[贵阳市图书馆](http://www.gylib.org.cn/)　[甘肃省图书馆](http://www.gslib.com.cn/index.php/page-view-id-4)　[陕西省图书馆](http://www.sxlib.org.cn/zy/szzy/zg/)
+
+------
+
+[广西外国语学院](http://sia.gxufl.com/info/26080.jspx)　
+
+[青海师范大学](http://lib.qhnu.edu.cn/article/399.html)　[山东轻工职业学院](http://www.silkedu.com/dep/tshu/news/news_view.asp?newsid=1497)　[四川航天职业技术学院](http://220.167.53.63:90/Resources.htm)　
+
+[广东财经大学](http://lib.gdufe.edu.cn/digitalresource/index.htm?q=自购)　[武汉职业技术学院](http://tsg.wtc.edu.cn/2015/0410/c77a501/page.htm)　[湖南铁道职业技术学院](http://lib.hnrpc.com/info/1020/1220.htm)　
+
+[天津商业大学](http://lib.tjcu.edu.cn/info/1059/1168.htm)　[武汉民政职业学院](http://www.whmzxy.cn/xibu/tsg/index.php?action=class&todo=content&do=show&a=352)　[湖南工艺美术职业学院](http://www.hnmeida.com.cn/html/489672233.html)　[大连民族大学](http://lib.dlnu.edu.cn/node/371.jspx)（账号较少）
+
+------
+
+重庆电讯职业学院  知网帐号：cqdxzytsg018（001→040）密码：cnki123456
+
+
+
+除此之外亦可亦可购买XX图书馆获取入口
+
+相关软件：[冰点文库下载器](http://www.bingdian001.com/?p=30)　[文献神器](http://www.9312.net/download.html) | [SciHub Desktop](https://zhuanlan.zhihu.com/p/31809890)　[豆丁当当](https://www.52pojie.cn/thread-834272-1-1.html)　[Google Books Downloader](www.gbooksdownloader.com/?src=update)
+
+
+
+
+
+
+
+#### 漫画下载
+
+------
+
+　　　搜索同样强调正确文件名，可多次搜索得出，亦可反推出发布源、集散地。
+
+
+
+**欧美**　`漫画名`+`格式`　可选 `形态` `发布组` `年份`  
+
+　　　`Blacksad digital .cbr` → `Blacksad (2010) (digital) (Son of Ultron II-Empire).cbr`
+
+```
+　　　其中digital和.cbr都是格式，扫漫不一定标注scan
+　　　美漫发布常为0-Day种子，所以结果可能是种子。下不动可尝试115离线
+　　　如0-Day Week，Novus Week，Hitlist Week，DC Week，Marvel Week，Image Week，INDIE Week等。
+```
+
+
+
+**扫漫**　`漫画名`+`作者`+`出版社　 `　可选 `扫者` `集数`
+
+　　　`龍珠完全版 鳥山明` →`[Dragon.Ball 龍珠完全版][鳥山明][文傳][C.C][34完+2]`
+
+```
+　　　中文扫漫、港台漫画、日文原版适用。
+　　　用云盘精灵搜索可能会有比较有趣的结果。中文扫漫更强调集散地，门槛较高。
+```
+
+
+
+　　　什么 你说[BD](https://fr.wikipedia.org/wiki/Bande_dessin%C3%A9e)生肉？文件名不再有用？那么[Yggtorrent](https://www.yggtorrent.gg)适合你，也可以看我的书签。
+
+
+
+
+
+
+
+#### 其他补充
+
+------
+
+`种子下载`  建议用迅雷以外客户端如[qBittorrent](https://www.qbittorrent.org/)、[tixati](https://www.tixati.com/)添加[Tracker 1](https://github.com/ngosang/trackerslist)或[Tracker 2](https://torrents.me/tracker-list/) 下载。有些[115](https://115.com/)能离线
+
+`种子搜索`  [Torrentz2](https://torrentz2.eu)、[BTDB](https://btdb.eu)等很多；偶尔可以试试谷歌加入site:vk.com
+
+`电影下载`  思路和图书漫画类似。下载站更多，也建议从[字幕](http://www.zimuku.la/)反推资源发布名以寻找种子/资源
+
+`音乐下载`  略有不同。除正版平台外，可尝试[MusicTools](https://www.52pojie.cn/thread-946739-1-1.html)、[全网音乐下载](http://www.myzhangyi.com/music/)
+
+`汉化漫画　`  引进被BAN或者翻译较差，安卓可以试试 [异次元](https://soft.shouji.com.cn/down/1550728.html)  通过添加[图源](http://gitlab.daguduiyuan.xyz/sheng6364/Source)聚合搜索阅读，详见评论、官方群
+
+ 有时试试`emule`搜索会有意想不到的结果；[DC++](http://dcplusplus.sourceforge.net/)由于各种原因，现在人很少不推荐，有共享精神仍可尝试。
 
 
 
@@ -1915,14 +2044,6 @@ Firefox导出的Html书签，直接打开即可。
 　　特色是包含还算全的在线漫画站点、下载生肉的博客；能在线看的期刊、数据可视化和一点儿开放教科书
 
 　　有个收费文件夹仅为围观和信息整理，请勿购买。
-
-
-
-**文献资源小列表**
-
-若校外需要知网，可用网上公开账号或者购买XX图书馆获取入口。注意此列表除知网外均已失效。
-
-　　相关软件：[冰点文库下载器](http://www.bingdian001.com/?p=30)　[文献神器](http://www.9312.net/download.html) | [SciHub Desktop](https://zhuanlan.zhihu.com/p/31809890)　[豆丁当当](https://www.52pojie.cn/thread-834272-1-1.html)
 
 
 
@@ -1950,61 +2071,9 @@ Firefox导出的Html书签，直接打开即可。
 
 
 
-**漫画**
-
-既然说到漫画，那说说简单的美漫生肉下载。
-
-除了书签里的站点外，常见发布是`0-Day种子`，均为各扫组最新打包合集，
-
-如`0-Day Week`　`Novus Week`　`Hitlist Week `　`DC Week` `　Marvel Week`　`Image Week`　`INDIE Week`等
-
-
-
-单个作品可以在谷歌、种子平台用关键词搜索：`漫画名+格式` 可选`形态` `发布组` `年份` 以得出正确发布文件名
-
-如 `Blacksad digital .cbr` → `Blacksad (2010) (digital) (Son of Ultron II-Empire).cbr`
-
-搜索正确文件名结果**比较可靠**，会有单独种子、种子包含或网盘下载等方式，逐一尝试即可。
-
-
-
-中文扫漫有点类似，举个例子`[Dragon.Ball 龍珠完全版][鳥山明][文傳][C.C][34完+2]`能总结出来吗？
-
-明白后，以后用百度、云盘精灵可能会有比较有趣的结果。不过，搜索并非关键。
-
-
-
-什么 你说[BD](https://fr.wikipedia.org/wiki/Bande_dessin%C3%A9e)生肉？文件名不再有用？那么[Yggtorrent](https://www.yggtorrent.gg)适合你，也可以仔细看我的书签。
-
-
-
-
-
-备注
-
-`种子下载`　建议用迅雷以外客户端如[qBittorrent](https://www.qbittorrent.org/)、[tixati](https://www.tixati.com/)添加[Tracker 1](https://github.com/ngosang/trackerslist)或[Tracker 2](https://torrents.me/tracker-list/) 下载。
-
-`种子搜索`　有[Torrentz2](https://torrentz2.eu)、[BTDB](https://btdb.eu)等很多；有些资源[115](https://115.com/)可以秒离线，就是太贵；偶尔可以试试谷歌加入site:vk.com。
-
-`电影下载`　思路和图书、软件类似，但下载站更多，也建议从字幕反推正资源发布名以寻找种子/资源。
-
-`音乐下载`　略有不同，除正版平台外，可尝试[MusicTools](https://www.52pojie.cn/thread-946739-1-1.html)、[全网音乐下载](http://www.myzhangyi.com/music/)。
-
-`汉化漫画　`　引进被BAN或者翻译较差，安卓可以试试 [异次元](https://soft.shouji.com.cn/down/1550728.html)  通过添加[图源](http://gitlab.daguduiyuan.xyz/sheng6364/Source)聚合搜索阅读，详细见评论或官方群
-
-　有时试试`emule`搜索会有意想不到的结果；[DC++](http://dcplusplus.sourceforge.net/)由于各种原因，现在人很少不太推荐，有共享精神仍可以试试。
-
-
-
 本文PC下载以官网和国内软件站为主，安卓下载以GooglePlay、酷安与手机乐园为主。…本想放在开头但好难看。
 
 未介绍Linux，但Linux用户这些不在话下，常见的[Evince](http://wiki.gnome.org/Apps/Evince)、[Okular](https://okular.kde.org/)不错。开始也说了是面向PC与安卓。
-
-
-
-其实可以看出来无论是图书还是漫画（其实还有电影），正确的文件名格式很重要，但为什么搜索不是关键呢？
-
-因为通过命名逻辑可以反推出发布源和集散地。
 
 
 
@@ -2030,6 +2099,8 @@ Firefox导出的Html书签，直接打开即可。
 | 屏幕录像专家 2019                                            | Delete   |                                                  |
 | Mathlab图形计算器（安卓）                                    | Delete   |                                                  |
 | PDF Watermark Revmoer                                        | Delete   |                                                  |
+| [BDSup2Sub](https://www.videohelp.com/software/BDSup2Sub)    | Delete   | 未失效                                           |
+| PDF Watermark Revmoer                                        | Delete   | 本无链接                                         |
 
 
 
@@ -2037,13 +2108,13 @@ Firefox导出的Html书签，直接打开即可。
 
 ### 附记
 
-　　本文最早源自给朋友写的小简介，还是聊天时说的，存了TXT。但后来总需要上传文件、TXT也不易看到重点，于是丢进Word、挂上网盘链接、加了点颜色就成了所谓《扫描版图书优化指南》……还发在了论坛。虽然难看，但毕竟只是有限人看。
+　　本文最早源自给朋友写的小简介，还是聊天时说的，存了TXT。后来总需要上传文件、TXT不易看到重点，于是丢进Word、挂上网盘链接、加点颜色就成了所谓《扫描版图书优化指南》…还发在论坛。虽然难看，但毕竟看的人有限。
 
-　　测试了几个版本后，又遇上总问“该用什么打开文件”、“怎么转PDF”等更基础问题的同学……就开始着手写阅读器简介。开始每类说明最多一行……可完善时又想到，单单PDF选择也很多…应尽力介绍各种情况下的阅读器。再加上其他格式，写起来就长了，索性和优化指南合并——也就是本指南的初版。
+　　测试几个版本后，又遇上总问“该用什么打开文件”、“怎么转PDF”等更基础问题的同学……就着手阅读器简介。开始每类说明最多一行……可完善时又想到，单单PDF选择也很多…应尽力介绍各种情况下的阅读器。然后加上其他格式，写起来就长了，索性和优化指南合并——也就是本指南的初版。
 
 　　本来觉得初版内容足够。吃饭时一想，阅读过程遇到生僻字、异体字怎么办？再说名字起这么大，也该尽力介绍吧？于是加上了词典翻译、看图截图，甚至还有字幕！再后来还有免费字体、搜索指南什么的，可能用上就写上了…虽然文献管理自觉没能力写好便放弃了。
 
-　　目前版本仍有很多问题：用专用样式排版、全文太长、介绍比较简略、优化指南文字生硬并存在大量歧义等等……但碍于本人第一次用Markdown写作……能力有限，没有较大更新不再变动。
+　　目前版本仍有很多问题：用专用样式排版、全文太长、介绍比较简略、优化指南文字生硬并存在大量歧义等等……但毕竟本人是第一次用Markdown写作……能力有限。没有较大更新不再变动。
 
 　　最后，为本文可能带来的的误导表示由衷的歉意。
 
